@@ -360,6 +360,7 @@ def jcc(args):
     mappings = {}
     sequences = {}
     renames = {}
+    use_full_names = False
     env = None
     wrapperFiles = 1
     prefix = None
@@ -450,6 +451,8 @@ def jcc(args):
                 i += 1
                 renames.update(dict([arg.split('=')
                                      for arg in args[i].split(',')]))
+            elif arg == '--use_full_names':
+                use_full_names = True
             elif arg == '--files':
                 i += 1
                 wrapperFiles = args[i]
@@ -603,10 +606,11 @@ def jcc(args):
             if moduleName:
                 for cls in importset:
                     name = cls.getName().split_pkg('.')[-1]
-                    if name in pythonNames:
-                        raise ValueError, (cls, 'python class name already in use, use --rename', name, pythonNames[name])
-                    else:
-                        pythonNames[name] = cls
+                    if not use_full_names:
+                        if name in pythonNames:
+                            raise ValueError, (cls, 'python class name already in use, use --rename', name, pythonNames[name])
+                        else:
+                            pythonNames[name] = cls
 
         todo = typeset - done
         if allInOne and wrapperFiles > 1:
@@ -640,10 +644,11 @@ def jcc(args):
                                          declares, typeset)
                 if moduleName:
                     name = renames.get(className) or names[-1]
-                    if name in pythonNames:
-                        raise ValueError, (cls, 'python class name already in use, use --rename', name, pythonNames[name])
-                    else:
-                        pythonNames[name] = cls
+                    if not use_full_names:
+                        if name in pythonNames:
+                            raise ValueError, (cls, 'python class name already in use, use --rename', name, pythonNames[name])
+                        else:
+                            pythonNames[name] = cls
                     python(env, out_h, out_cpp,
                            cls, superCls, names, superNames,
                            constructors, methods, protectedMethods,
@@ -676,7 +681,7 @@ def jcc(args):
         if moduleName:
             out = file(os.path.join(cppdir, moduleName) + '.cpp', 'w')
             module(out, allInOne, done, imports, cppdir, moduleName,
-                   shared, generics)
+                   shared, generics, use_full_names)
             out.close()
             if build or install or dist or egg_info:
                 compile(env, os.path.dirname(args[0]), output, moduleName,
